--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 /Assets/ArenaSDK/ThirdPartyAssets/*
 !/Assets/ArenaSDK/ThirdPartyAssets/BarcadeGamesAssetPack
+!/Assets/ArenaSDK/ThirdPartyAssets/Boxing
 
 /[Ll]ibrary/
 /[Tt]emp/
