--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,31 @@
 !/Assets/ArenaSDK/ThirdPartyAssets/BarcadeGamesAssetPack
 !/Assets/ArenaSDK/ThirdPartyAssets/Boxing
 !/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+!/Assets/ArenaSDK/ThirdPartyAssets/CardGameObjects
+
+
 
 /[Ll]ibrary/
 /[Tt]emp/
