update walker and robot

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Commercial Projects are removed from public release
 /Assets/Snake
+/Assets/ArenaSDK/ThirdPartyAssets/SimplePolyStadiumKit
 
 /[Ll]ibrary/
 /[Tt]emp/
